<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/backgroundColor"
    android:padding="6dp"
    >






    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="0dp"


        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView

                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/AboutMe_Title"
                android:textColor="@color/blackColor"
                android:textSize="18sp"
                android:fontFamily="@font/roboto"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/Question1"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:fontFamily="@font/roboto"
                android:text="Answer"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="5dp"
                android:textColor="@color/blackColor"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"

                android:layout_marginTop="10dp"
                android:background="@color/grayColor" />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/Question2"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:fontFamily="@font/roboto"
                android:text="Answer"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="5dp"
                android:textColor="@color/blackColor"/>





        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="#FFFFFF"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="0dp"
        android:layout_marginTop="6dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:fontFamily="@font/roboto"
            
            android:layout_marginStart="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/contact_information"
            android:textColor="@color/blackColor"
            android:textSize="18sp"
            />

        <LinearLayout
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="45dp"
            >

            <ImageView
                android:id="@+id/emailIcon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                />


            <ImageView
                android:id="@+id/addressIcon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="53dp"

                />

            <ImageView
                android:id="@+id/phoneIcon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="55dp"
                android:layout_marginBottom="20dp" />



        </LinearLayout>

        <ImageView
            android:id="@+id/phoneCallLink"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/phone"
            android:layout_gravity="bottom|right"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="18dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="45dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="Email"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:fontFamily="@font/roboto"
                android:longClickable="true"
                android:text="@string/email"
                android:textColor="@color/blackColor"
                android:textIsSelectable="true"
                android:textSize="15sp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="@color/grayColor"
                android:fontFamily="@font/roboto" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="15dp"
                android:fontFamily="@font/roboto"
                android:text="Address"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:fontFamily="@font/roboto"
                android:longClickable="true"
                android:text="@string/Address"
                android:textColor="@color/blackColor"

                android:textIsSelectable="true"
                android:textSize="15sp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="@color/grayColor"
                android:fontFamily="@font/roboto" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/roboto"

                android:text="Phone Number"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/roboto"
                android:longClickable="true"
                android:enabled="true"
                android:textIsSelectable="true"
                android:text="@string/phoneNumber"
                android:textColor="@color/blackColor"
                android:textSize="15sp" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:orientation="vertical"
            android:layout_marginTop="45dp"
            android:layout_marginRight="15dp"
            >
            <ImageView
                android:id="@+id/emaailCopyLink"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/copy"
               android:layout_marginTop="15dp"
                />
            <ImageView
                android:id="@+id/addressCopyLink"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/copy"
                android:layout_marginTop="48dp"
                />
            <ImageView
                android:id="@+id/phoneCopyLink"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/copy"
                android:layout_marginTop="48dp"
                />

        </LinearLayout>



    </androidx.cardview.widget.CardView>

















    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        card_view:cardBackgroundColor="#FFFFFF"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="0dp"


        >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:layout_marginStart="15dp"
            
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto"
            android:text="Professional Links "
            android:textColor="@color/blackColor"
            android:textSize="18sp"
            />

        <LinearLayout
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginTop="45dp"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/linkedinIcon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                 />

            <ImageView
                android:id="@+id/twitterIcon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="45dp"
              />

            <ImageView
                android:id="@+id/githubIcon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="58dp"
                />

            <ImageView
                android:id="@+id/stackOverFlowIcon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="45dp"
                android:layout_marginBottom="20dp"
                 />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="45dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:fontFamily="@font/roboto"

                android:text="Linkedin"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/linkedin"
                android:fontFamily="@font/roboto"
                android:text="@string/Linkedin_UserName"
                android:textColor="@color/blackColor"
                android:textSize="15sp"
                android:longClickable="true"
                android:enabled="true"
                android:textIsSelectable="true"/>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:enabled="true"
              
                android:longClickable="true"
                android:textIsSelectable="true"
                android:background="@color/grayColor"
                android:fontFamily="@font/roboto" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="15dp"
                android:fontFamily="@font/roboto"
                android:text="Twitter"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/twitter"
                android:fontFamily="@font/roboto"
                android:text="@string/Twitter_userName"
                android:textColor="@color/blackColor"
                android:textSize="15sp"
                android:longClickable="true"
                android:enabled="true"
                android:textIsSelectable="true"/>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="@color/grayColor"
                android:fontFamily="@font/roboto" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/roboto"
                android:text="Github"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:id="@+id/github"
                android:enabled="true"
              
                android:longClickable="true"
                android:textIsSelectable="true"
                android:text="@string/Github_UserName"
                android:textColor="@color/blackColor"
                android:textSize="15sp"
                />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="@color/grayColor"
                android:fontFamily="@font/roboto" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="15dp"
                android:fontFamily="@font/roboto"
                android:text="Stack Overflow"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/roboto"
                android:id="@+id/stackOverFlow"
                android:enabled="true"
                android:longClickable="true"
                android:textIsSelectable="true"

                android:text="@string/StackOverFlow_UserName"
                android:textColor="@color/blackColor"
                android:textSize="15sp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:orientation="vertical"
            android:layout_marginTop="45dp"
            android:layout_marginRight="15dp"
            >
            <ImageView
                android:id="@+id/linkedinCopyLink"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/copy"
                android:layout_marginTop="15dp"
                />
            <ImageView
                android:id="@+id/twitterCopyLink"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/copy"
                android:layout_marginTop="48dp"
                />
            <ImageView
                android:id="@+id/githubCopyLink"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/copy"
                android:layout_marginTop="48dp"
                />
            <ImageView
                android:id="@+id/stackOverFlowCopyLink"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/copy"
                android:layout_marginTop="48dp"
                />

        </LinearLayout>



    </androidx.cardview.widget.CardView>












</LinearLayout>